--- a/src/extra/mar 全自动反省机.html
+++ b/src/extra/mar 全自动反省机.html
@@ -9,13 +9,15 @@
 <body>
     <script>
         
-        window.onload = (function()
-        {
+        window.onload = (function(){
             let i = 0;
             let instance = false
             document.addEventListener("mousemove",()=>{
-                if( !instance )
-                {
+                // let div = document.createElement('div')
+                //         div.innerHTML = `对不起，这是我第${i++}次做这种事，是我的不对，我要反思一下`
+                //         document.body.appendChild(div)
+                //         instance = true
+                if( !instance ){
                     setTimeout(()=>{
                         let div = document.createElement('div')
                         div.innerHTML = `对不起，这是我第${i++}次做这种事，是我的不对，我要反思一下`
